--- a/package.json
+++ b/package.json
@@ -1,5 +1,38 @@
 {
+  "name": "brainstormr-backend",
+  "version": "1.0.0",
+  "description": "node backend of brainstormr",
+  "main": "server.js",
+  "engines": {
+    "node": ">=14.20.1"
+  },
+  "scripts": {
+    "dev": "nodemon server",
+    "start": "node server.js"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    
+    "express-rate-limit": "^7.0.1",
+    "helmet": "^7.0.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "pg-native": "^3.0.1",
+    "postgres": "^3.3.5",
+    "sequelize": "^6.33.0",
+    "validator": "^13.11.0",
+    "xss-clean": "^0.1.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
